feat: Improve display of rewards detail list - MEED-7632 - Meeds-io/MIPs#154